Refactored tests, added log in button for devise authentication

--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -4,3 +4,7 @@ nav.top-bar
   text-align: center
   h2
     color: #e1e1e1
+  .login-out-block
+    position: absolute
+    right: 2em
+    top: 0.5em
